force-app/main/default/objects/FieloPLT__Mission__c/FieloPLT__Mission__c.object-meta.xml
<CustomObject>
    <description>Missions are a set of activities that Members need to accomplish in order to win a Challenge. There are two types of Missions: Missions with Objetive, which include a particular goal that must be fullfiled, and Missions without Objetive, which do not have a special established aim.</description>
    <label>Mission</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>