force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Challenge where the Mission belongs to.</description>
    <inlineHelpText>This is the Challenge that the Mission belongs to.</inlineHelpText>
    <label>Challenge</label>
    <referenceTo>FieloPLT__Challenge__c</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>