force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Mission detailed description.</description>
    <inlineHelpText>Enter a description for your Mission. You can use this internally or make it visible to Members on your loyalty portal.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>