force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__DynamicObjective__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DynamicObjective__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, &quot;Objective Field&quot; can be any numerical field from the Member.</description>
    <inlineHelpText>If ticked, &quot;Objective Field&quot; can be any numerical field from the Member.</inlineHelpText>
    <label>Dynamic Objective Field</label>
    <type>Checkbox</type>
</CustomField>