force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__EndDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EndDate__c</fullName>
    <description>Mission final date. If no Final date is established, Mission lasts indefinetely as long as the Challenge remains &quot;Active&quot;.</description>
    <inlineHelpText>Choose a date for the Mission to end. If blank, the Mission will be valid as long as its Challenge is &quot;Active&quot;.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>