force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__FieldToAggregate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FieldToAggregate__c</fullName>
    <description>Specific field of the Target Object which can be summarized, averaged or maximum value.</description>
    <inlineHelpText>Select the field from Target Object to be used for summing (Sum), averaging (Average) or determining the maximum (Max Value) or most recent (Last) value.</inlineHelpText>
    <label>Field to Aggregate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>