force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__LeaderboardMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LeaderboardMode__c</fullName>
    <description>It enables to choose how to configure a Leaderboard in Missions. For Missions with Objective, Leaderboard Mode can be &quot;Progress&quot; or &quot;Performance&quot;; for Missions without Objective Leaderboard Mode must be &quot;Performance&quot;.</description>
    <inlineHelpText>Choose how Mission progress is displayed: &quot;Progress&quot; to show the progress percentage of Members participating in a Mission (Mission with Objective only) or &quot;Performance&quot; to show Members&apos; performance score.</inlineHelpText>
    <label>Leaderboard Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>