force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__MinValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MinValue__c</fullName>
    <description>It stores the minimum Leaderboard Value obtained when processing Tracker for all Members who are part of a Mission (Mission Members).</description>
    <inlineHelpText>It stores the minimum Leaderboard Value obtained when processing Tracker for all Members who are part of a Mission (Mission Members).</inlineHelpText>
    <label>Min.Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>