force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__ObjectiveField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ObjectiveField__c</fullName>
    <description>When Dynamic Objective Field is ticked,</description>
    <label>Objective Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>