force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__ObjectiveType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ObjectiveType__c</fullName>
    <description>Mission objetive. The available objectives are: Counter, Sum, Average, Max.Value and Last.</description>
    <inlineHelpText>Choose how to quantify the Mission: Counter to count how many times the Action is performed, Sum to add up Target Object field values, Average to average the field values, Max Value to use the max of the field values and Last to use the most recent value.</inlineHelpText>
    <label>Objective Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Max Value</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>