force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__ObjectiveValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ObjectiveValue__c</fullName>
    <description>Fixed value used by the Mission Objective to evaluate if the Mission is met.</description>
    <inlineHelpText>Enter the value to be compared with the Action counter or Target Object field summary.</inlineHelpText>
    <label>Objective Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>