force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__Operator__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Operator__c</fullName>
    <description>Relational operator (E.g. &quot;equal to&quot;, &quot;greater than&quot;, etc.).</description>
    <inlineHelpText>Choose a mathematical operator with which to compare the Action counter or Target Object field summary and the Objective Value or Objective Field.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>