force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Order__c</fullName>
    <description>Mission Order for subscribed Members to obtain the appropiate Challenge Reward.</description>
    <inlineHelpText>Mission Order for subscribed Members to obtain the appropiate Challenge Reward.</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>