force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__RequiredMissions__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RequiredMissions__c</fullName>
    <description>Checked Mission/s must be achieved before starting current Mission.</description>
    <inlineHelpText>Checked Mission/s must be achieved before starting current Mission.</inlineHelpText>
    <label>Mission Dependency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>