force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__RewardingTime__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardingTime__c</fullName>
    <label>Rewarding Time</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloPLT__TableType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accomplished</fullName>
            </value>
            <value>
                <fullName>Challenge Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>