force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StartDate__c</fullName>
    <description>Date when the Mission starts. If no Initial date is established, Mission will be valid as long as its Challenge is &quot;Active&quot;.</description>
    <inlineHelpText>Choose a date for the Mission to begin. If blank, the Mission will be valid as long as its Challenge is &quot;Active&quot;.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>