force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__TableType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TableType__c</fullName>
    <description>It shows the available options to configure Rewards for Missions. Table Types include the following: Singular Table (it grants a Reward for Missions without Leadboard), Time Table (it grants a Reward for Missions whose Leaderboard Mode is &quot;Time&quot;) , Performance Position and Performance Value.</description>
    <inlineHelpText>Choose the Mission Reward Table for the Mission.</inlineHelpText>
    <label>Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singular</fullName>
            </value>
            <value>
                <fullName>Time Position</fullName>
            </value>
            <value>
                <fullName>Performance Value</fullName>
            </value>
            <value>
                <fullName>Performance Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>