force-app/main/default/objects/FieloPLT__Mission__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>It shows the kind of Mission. Missions with Objective meet a particular goal; Mission without Objective do not include a established aim. This field is automatically completed after creating a Mission whether its &quot;Objective&quot; section is completed or not.</description>
    <formula>IF(
   ISPICKVAL(FieloPLT__Operator__c, &apos;&apos;) &amp;&amp; 
   OR( ISBLANK(FieloPLT__ObjectiveValue__c), ISBLANK(FieloPLT__ObjectiveField__c) )
   , &apos;Without Objective&apos;,
    &apos;With Objective&apos;
)</formula>
    <inlineHelpText>It shows the kind of Mission. Missions with Objective meet a particular goal; Mission without Objective do not include a established aim. This field is automatically completed after creating a Mission whether its &quot;Objective&quot; section is completed or not.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>